# manac

./: .gitignore  CMakeLists.txt  README.md  debug.txt
include/: lexer.h  mana.h
licenses/: README.md
licenses/rlutils/: LICENSE
source/: error.c  error.h  lexer.c  lexer.h  main.c  mana.c  mana.h  parser.c  parser.h  unit_tests.c  unit_tests.h  utils.c  utils.h
tests/: sample.mana  test_01_namespace.mana  test_02_import.mana
